# llm-exp

./: .editorconfig  .env-example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  aws.py  aws_chat_request.py  aws_embedding.py  aws_image.py  aws_request.py  aws_response.py  azure.py  config.py  errors.py  litellm_exp.py  oai.py  pyproject.toml  types_chat.py  types_embedding.py  types_image.py  vertexai.py  vertexai_chat_request.py  vertexai_embedding.py  vertexai_image.py  vertexai_request.py  vertexai_response.py
.clinerules/: 01-instructions.md  02-project.md
